syntax = "proto3";

option go_package = "epistemic-me-backend/pb/models";

message Developer {
    string id = 1;
    string name = 2;
    string email = 3;
    repeated string api_keys = 4;
    int64 created_at = 5;
    int64 updated_at = 6;
}
